--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Run Python Script
 # Definiert, wann der Workflow ausgelöst wird (jede Stunde)
 on:
   schedule:
-    - cron: "0 * * * *"  # Jede volle Stunde
+    - cron: "0 0 * * *"  # Jede volle Stunde
   workflow_dispatch:
 
 jobs:
@@ -35,5 +35,5 @@ jobs:
           
       - name: Run script
         run: |
-          python ./app.py
+          python ./Kalender.py
 
