--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
     env:
       NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
-      DATABASE_KALENDER_ID: ${{ secrets.DATABASE_KALENDER_ID }}
+      DATABASE_KALENDER: ${{ secrets.DATABASE_KALENDER }}
       DATABASE_TRIALS_ID: ${{ secrets.DATABASE_TRIALS_ID }}
       DATABASE_MAPS_ID: ${{ secrets.DATABASE_MAPS_ID }}
       DATABASE_PRAC_GEGNER_ID: ${{ secrets.DATABASE_PRAC_GEGNER_ID }}
