--- a/.github/workflows/PracGegner.yml
+++ b/.github/workflows/PracGegner.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install notion-client 
+          pip install google-auth google-auth-oauthlib google-api-python-client notion-client python-dotenv
           
       - name: Run script
         run: |
