--- a/.github/workflows/PracGegner.yml
+++ b/.github/workflows/PracGegner.yml
@@ -1,24 +1,27 @@
 name: Prac Gegner
 
-# Definiert, wann der Workflow ausgelöst wird (jede Stunde)
 on:
   schedule:
-    - cron: "0 0 * * *"  # Jede volle Stunde
+    - cron: "0 18 * * *"  # Täglich um 18:00 Uhr
+    - cron: "0 19 * * *"  # Täglich um 19:00 Uhr
+    - cron: "0 20 * * *"  # Täglich um 20:00 Uhr
+    - cron: "0 21 * * *"  # Täglich um 21:00 Uhr
+    - cron: "0 22 * * *"  # Täglich um 22:00 Uhr
+    - cron: "0 0 * * *"   # Täglich um 00:00 Uhr (Mitternacht)
   workflow_dispatch:
 
 jobs:
   run-script:
     runs-on: ubuntu-latest
     environment: 
-      name : app
+      name: app
 
     env:
-        NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
-        GOOGLE_KALENDER_ID: ${{ secrets.GOOGLE_KALENDER_ID }}
-        NOTION_PRAC_LIST: ${{ secrets.NOTION_PRAC_LIST }}
-        NOTION_ENEMY_LIST: ${{ secrets.NOTION_ENEMY_LIST }}
-        GOOGLE_SERVICE_ACCOUNT_KEY: ${{secrets.GOOGLE_SERVICE_ACCOUNT_KEY}}
-        GOOGLE_TOKEN: ${{secrets.GOOGLE_TOKEN}}
+      NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
+      GOOGLE_KALENDER_ID: ${{ secrets.GOOGLE_KALENDER_ID }}
+      NOTION_PRAC_LIST: ${{ secrets.NOTION_PRAC_LIST }}
+      NOTION_ENEMY_LIST: ${{ secrets.NOTION_ENEMY_LIST }}
+      GOOGLE_TOKEN: ${{ secrets.GOOGLE_TOKEN }}
 
     steps:
       - name: Checkout code
