--- a/.github/workflows/Kalender.yml
+++ b/.github/workflows/Kalender.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install notion-client pytz python-dotenv
+          pip install notion-client pytz
           
       - name: Run script
         run: |
