--- a/.github/workflows/PracGegner.yml
+++ b/.github/workflows/PracGegner.yml
@@ -22,6 +22,7 @@ jobs:
       NOTION_PRAC_LIST: ${{ secrets.NOTION_PRAC_LIST }}
       NOTION_ENEMY_LIST: ${{ secrets.NOTION_ENEMY_LIST }}
       GOOGLE_TOKEN: ${{ secrets.GOOGLE_TOKEN }}
+      NOTION_ANALYSIS_MAP: ${{ secrets.NOTION_ANALYSIS_MAP }}
 
     steps:
       - name: Checkout code
